--- a/C17-Amortized-Analysis/17.1.md
+++ b/C17-Amortized-Analysis/17.1.md
@@ -12,3 +12,24 @@ Show that if a DECREMENT operation were included in the k-bit counter example, n
 
 ### `Answer`
 In the worst case, going from 1[k-1 0's] (ie. 1000 -> 0111) takes k flips. Could do any sequence of increment and decrement from 1000 -> 0111 -> 1000 -> 0111 (n times), which is theta(nk).
+
+###Exercise 17.1-3
+***
+Suppose we perform a sequence of n operations on a data structure in which the *i*th operation on a data structure in which the *i*th operation costs *i* if *i* is anexact power of 2, and 1 otherwise. Use aggregate analysis to determine the amortized cost per operation.
+
+### `Answer`
+i	cost
+1	1
+2	2
+3	1
+4	4
+5	1
+6	1
+7	1
+8	8
+...
+Total cost is 
+![](http://i.imgur.com/NhomuHC.jpg)
+![](http://i.imgur.com/MF5qTAO.jpg)
+![](http://i.imgur.com/0ykkS94.jpg)
+![](http://i.imgur.com/IiDYKzc.jpg)
